Revision history for PDF::SVG

0.050
	- Docs!
	- Warn when element is not implemented.
	- Add example program.
	- Rename script to svgpdf.
	- Add support for <style>.

0.040	2023-07-19

	- Reworked to COR using Object::Pad (WIP).
	- Steal and enhance parser from XML::Tiny.
	- Improve fill/stroke (handle transparency).
	- Add grid for debugging.
	- Add ellipse.
	- Improve scaling.
	- Handle argument and units.
	- Fix fontsize bug in makefont.
	- Handle stroke-linejoin and stroke-linecap.
	- Add routines for circular and elliptic arcs.

0.030	2023-07-12

	- Add single-style outline for simple <text>.
	- Add circle.
	- Add polyline.
	- Add image (inline, base64).
	- Add path S, Q (qubic bezier) and T.
	- Add sample program.
	- Neatify PAST to generate perl program.
	- (CSS) Handle outline shorthand.
	- (CSS) Fix priorities.
	- Elegantly skip unimplemented arcs.
	- Fix rectangle bug.

0.020	2023-07-07

	- Moved repo to Github.
	- Added subroutine signatures.
	- Almost everything is working again.
	- (CSS) Handle selector el.class.
	- Fixed css mixups and whitespace elements.

0.010   2022-04-03

	- First version, released on an unsuspecting world.
