@@ -1,6 +1,9 @@
 Revision history for PDF::SVG
 
 0.050
+	- (Partial) support for @font-face.
+	- Add tweak for MathJax.
+	- Move font managing to separate module.
 	- Docs!
 	- Warn when element is not implemented.
 	- Add example program.
